k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-registration
  namespace: student-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: student-registration

  template:
    metadata:
      labels:
        app: student-registration

    spec:
      serviceAccountName: student-app-ksa

      nodeSelector:
        workload: student-app

      containers:
        - name: application
          image: asia-south1-docker.pkg.dev/pe3-devops-training-svaranasi/pe3-app-images/student-registration:manual-v1
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5

          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

        - name: cloud-sql-auth-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2
          args:
            - "--auto-iam-authn=false"
            - "--structured-logs"
            - "--port=3306"
            - "pe3-devops-training-svaranasi:asia-south1:pe3-svaranasi-student-trn-mysql"

          securityContext:
            runAsNonRoot: true

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
